# Retrieval_Augmented_Generation_from_Basic_to_Advance

./: .gitignore  README.md  pyproject.toml
RAG_notebooks/: 1. Introduction_to_RAG.ipynb
RAG_notebooks/1. Pythonic_RAG/: Basic_RAG.ipynb
RAG_notebooks/2. Vanilla_RAG/: vanilla_rag.ipynb  vanilla_rag.md
RAG_notebooks/3. Deep_Dive_RAG/: Simple_RAG_System_Langchain.ipynb  building_blocks_of_RAG.ipynb  building_blocks_of_RAG.md
RAG_notebooks/3. Deep_Dive_RAG/docs_db/127a718e-0dce-4e63-9e53-1b53824e94f5/: index_metadata.pickle
RAG_notebooks/4. Contextual_RAG/: Contextual_RAG_with_Citations.ipynb  Contextual_RAG_with_Citations.md
RAG_notebooks/4. Contextual_RAG/context_db/e667027c-f530-42a3-a572-1459de29b42b/: index_metadata.pickle
RAG_notebooks/Pythonic_RAG/: 1. Introduction_to_RAG.md  Basic_RAG.ipynb  Introduction_to_RAG.md
RAG_notebooks/Vanilla_RAG/: vanilla_rag.md
images/: vanilla_rag copy.drawio
